--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -35,10 +35,11 @@
     "react-hooks/exhaustive-deps": "warn",
 
     "no-use-before-define": "off",
-  
+    "camelcase": "off",
+
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
-  
+
     "import/extensions": [
       "error",
       "ignorePackages",
