--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -34,6 +34,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
 
+    "react/jsx-props-no-spreading": "off",
+
     "no-use-before-define": "off",
     "camelcase": "off",
 
