--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -35,6 +35,7 @@
     "react-hooks/exhaustive-deps": "warn",
 
     "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
 
     "no-use-before-define": "off",
     "camelcase": "off",
