--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,9 +22,11 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "2.0.0-alpha.6.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.2.0"
   },
