--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
     "expo-font": "~8.3.0",
@@ -22,19 +24,22 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-masked-text": "^1.13.0",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "2.0.0-alpha.6.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/styled-components": "^5.1.3",
+    "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
