--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,9 @@
     "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-permissions": "~9.3.0",
+    "expo-random": "~9.0.0",
     "expo-status-bar": "^1.0.2",
+    "expo-web-browser": "~8.5.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
